# rust

./: .gitignore  README.md
fibo/: fibo.md  (+1 more)
tp-led-matrix/: Cargo.toml  jlink.gdb  rust-toolchain.toml
tp-led-matrix/.cargo/: config.toml
tp-led-matrix/src/: image.rs  lib.rs  main.rs  matrix.rs
tp-led-matrix/target 3/: .rustc_info.json
tp-led-matrix/target 3/debug/.fingerprint/autocfg-3beb842729932fc8/: lib-autocfg
tp-led-matrix/target 3/debug/.fingerprint/bare-metal-3ec05d97d8268ba6/: build-script-build-script-build
tp-led-matrix/target 3/debug/.fingerprint/bare-metal-5f4bc02c584e6667/: run-build-script-build-script-build.json
tp-led-matrix/target 3/debug/.fingerprint/bare-metal-a6f700b798fc10d3/: lib-bare_metal.json
tp-led-matrix/target 3/debug/.fingerprint/bitfield-db5a26b026e3ced5/: lib-bitfield.json
tp-led-matrix/target 3/debug/.fingerprint/cortex-m-155c7f21a2722180/: run-build-script-build-script-build
tp-led-matrix/target 3/debug/.fingerprint/cortex-m-6f97a8060fabb637/: lib-cortex_m.json
tp-led-matrix/target 3/debug/.fingerprint/cortex-m-884c1f04a4066732/: build-script-build-script-build.json
tp-led-matrix/target 3/debug/.fingerprint/cortex-m-c1abfb368bac5b71/: build-script-build-script-build
tp-led-matrix/target 3/debug/.fingerprint/cortex-m-rt-04306e2a7a2792f4/: run-build-script-build-script-build
tp-led-matrix/target 3/debug/.fingerprint/cortex-m-rt-17c5ab6e0fef02b8/: lib-cortex_m_rt
tp-led-matrix/target 3/debug/.fingerprint/cortex-m-rt-macros-ab53c544730d37de/: lib-cortex_m_rt_macros.json
tp-led-matrix/target 4/: .rustc_info.json
(+292 files in other folders)
